@@ -104,6 +104,7 @@ def cancel_subtasks(task, event):
 def start_next_task(task, event):
     # todo also handle skipped tasks
     if event.action not in ['task-transition-open-resolved',
+                            'task-transition-open-tested-and-closed',
                             'task-transition-in-progress-resolved',
                             'task-transition-in-progress-tested-and-closed',
                             'task-transition-rejected-skipped',
