@@ -10,6 +10,7 @@ Changelog
 - Disallow dossier from template when adding businesscasedossier is disallowed. [njohner]
 - Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
 - Add modification and creation date column to document listings. [njohner]
+- Fix handling of unidirectional by reference tasks in a sequential process. [phgross]
 
 
 2018.4.2 (2018-08-30)
